# libcrux-iot

./: LICENSE-MIT
c/ml-kem/extracted/: code_gen.txt  header.txt  libcrux_iot_core.c  libcrux_iot_core.h  libcrux_iot_mlkem1024.h  libcrux_iot_mlkem1024_portable.c  libcrux_iot_mlkem1024_portable.h  libcrux_iot_mlkem768.h  libcrux_iot_mlkem768_portable.c  libcrux_iot_mlkem768_portable.h  libcrux_iot_mlkem_portable.c  libcrux_iot_mlkem_portable.h  libcrux_iot_sha3.c  libcrux_iot_sha3.h
c/ml-kem/extracted/internal/: libcrux_iot_core.h  libcrux_iot_mlkem_portable.h  libcrux_iot_sha3.h
libcrux-iot/: Cargo.toml
libcrux-iot-binary-size/: Cargo.toml
libcrux-iot/aes/: CHANGELOG.md  Cargo.toml  README.md  config.toml  fuzz.sh  hax.py  shell.nix
libcrux-iot/aes/benches/: aesgcm.rs
libcrux-iot/aes/examples/: bench_typed_owned.rs  bench_typed_refs.rs
libcrux-iot/aes/fuzz/: Cargo.toml
libcrux-iot/aes/fuzz/fuzz_targets/: decrypt128.rs  decrypt256.rs  decrypt_ccm128.rs  decrypt_ccm128_short_tag.rs  decrypt_ccm256.rs  decrypt_ccm256_short_tag.rs  encrypt128.rs  encrypt256.rs  encrypt_ccm128.rs  encrypt_ccm128_short_tag.rs  encrypt_ccm256.rs  encrypt_ccm256_short_tag.rs
libcrux-iot/aes/src/: aes.rs  aes_ccm.rs  aes_gcm.rs  aes_gcm_128.rs  aes_gcm_256.rs  ctr.rs  gf128.rs  lib.rs  platform.rs  traits_api.rs
libcrux-iot/aes/src/ctr/: aes128_ctr.rs  aes256_ctr.rs  test128.rs
libcrux-iot/aes/src/gf128/: test.rs
libcrux-iot/aes/src/platform/portable/: aes_core.rs
libcrux-iot/aes/tests/: key_centric.rs  self.rs  wycheproof.rs
libcrux-iot/ml-dsa/src/: helper.rs  sample.rs
libcrux-iot/ml-kem/proofs/aeneas-lean/LibcruxIotMlKem/: InvertNtt.lean  README.md
libcrux-iot/ml-kem/proofs/aeneas-lean/LibcruxIotMlKem/Matrix/: ComputeAsPlusE.lean
libcrux-iot/ml-kem/proofs/aeneas-lean/LibcruxIotMlKem/Matrix/ComputeMessage/: FC.lean
libcrux-iot/ml-kem/proofs/aeneas-lean/LibcruxIotMlKem/Matrix/ComputeRingElementV/: FC.lean
libcrux-iot/ml-kem/proofs/aeneas-lean/LibcruxIotMlKem/Matrix/ComputeVectorU/: FC.lean  (+1 more)
libcrux-iot/ml-kem/proofs/aeneas-lean/LibcruxIotMlKem/Polynomial/: PolyOps.lean  PolyOpsFc.lean
libcrux-iot/ml-kem/proofs/aeneas-lean/LibcruxIotMlKem/Spec/: Lift.lean
libcrux-iot/ml-kem/src/: constant_time_ops.rs  helper.rs  sampling.rs
libcrux-iot/sha3/src/: keccak.rs  lib.rs  state.rs
libcrux-nucleo-l4r5zi/: Cargo.toml  parse_bench.py
libcrux-testbench/: Cargo.toml
(+3 files in other folders)
