[package]
name = "libcrux-testbench"
version = "0.1.0"
edition = "2021"

[dependencies]
libcrux-iot-ml-dsa = { path = "../libcrux-iot/ml-dsa" }
libcrux-iot-ml-kem = { path = "../libcrux-iot/ml-kem", default-features = false, features = [ "mlkem512", "mlkem768", "mlkem1024",] } 
libcrux-iot-testutil = { path = "../libcrux-iot-testutil" }
libcrux-traits = "0.0.7"

[patch.crates-io]
# patch until libcrux-secrets 0.0.6 is released
libcrux-secrets = { git = "https://github.com/cryspen/libcrux.git", rev = "ff50cd1f5e20e88dcba911469ba32ba87733006c" }

[features]
default = ["mldsa87"]
mldsa44 = []
mldsa65 = []
mldsa87 = []
